ui.frontend/src/main/webpack/etisalat/styles/custom-components/header/top-navigation.scss
.top-nav {
  background-color: $sand-white;
  text-transform: uppercase;
  border: 0;
  margin-bottom: 0;
  position: fixed;
  z-index: 1030;
  top: 0;
  width: 100%;
  transition: 0.3s;
  min-height: 48px;

  &.fixedNav {
    position: fixed;
    top: -1px;
    left: 0;
    width: 100%;
    z-index: 9000;
    transition: 0.3s;
  }

  .top-nav-main-row {
    display: flex;
    justify-content: space-between;
  }

  .top-nav-channel {
    display: flex;
    justify-content: flex-start;
  }

  .top-nav-language {
    display: flex;
    justify-content: flex-end;
  }

  a {
    display: inline-block;
    width: 100%;
    height: 48px;
    font-size: 0.6875rem;
    letter-spacing: 0.1818181818em;
    color: $almost-black;
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
  }

  .text-right a {
    justify-content: flex-end;
  }

  .text-center a {
    justify-content: center;
  }

  .active > a,
  .active > a:focus,
  .active > a:hover,
  a:focus,
  a:hover,
  a:hover {
    color: $almost-black;
    transition: 0.3s;
  }

  #top-nav-store-img {
    width: 14px;
    height: 18px;
    margin-left: 10px;
  }

  #top-nav-cart-img,
  svg {
    width: 24px;
    height: 21px;
    margin-left: 10px;
  }

  #top-nav-arrow-img {
    transform: rotate(90deg);
    width: 5px;
    height: 9px;
    margin-left: 10px;
    position: absolute;
    top: 43%;
    right: 10%;
  }

  span.language-switch-content {
    font-size: 1rem;
    font-weight: 100;
    font-family: GE SS Two, Arial, sans-serif;
    letter-spacing: 0;
  }

  span.badge-top {
    width: 1.31rem;
    height: 1.31rem;
    background-color: $main-green;
    color: $white;
    border-radius: 50%;
    line-height: 1.31rem;
    position: absolute;
    top: 0;
    left: 50%;
    letter-spacing: 2px;
    margin-left: 0.3rem;
    text-align: center;
  }

  .align-cart {
    a > div:first-child {
      margin-right: -10px;
      span {
        float: right;
      }
    }
    a > div:nth-child(2) {
      padding-top: 5px;
    }
  }
}
/*
 * RTL support
 */
html[lang="ar"] {
  *[dir="rtl"] {
    .top-nav-section {
      &.top-nav {
        a {
          font-size: 0.6875rem;
        }
        #top-nav-cart-img,
        .top-nav .links svg {
          margin-left: 0;
          margin-right: 10px;
        }
        .top-nav-right #top-nav-arrow-img {
          left: 0;
          right: auto;
        }
      }
      .top-nav-right {
        text-align: left;
      }
    }

    .top-nav {
      span.language-switch-content {
        font-size: 0.6875rem;
      }

      a {
        font-size: 0.875rem;
      }

      span.badge-top {
        right: 50%;
        left: auto;
        margin-right: 0.15rem;
        margin-left: 0;
        top: 0.25rem;
      }
    }

    #top-nav-store-img {
      margin-right: 10px;
    }

    #top-nav-cart-img {
      margin-right: 10px;
    }

    #top-nav-arrow-img {
      width: 5px;
      height: 9px;
      margin-left: 10px;
      transform: rotate(90deg);
      position: absolute;
      right: 15%;
      left: auto;
      top: 40%;
    }

    .align-cart {
      a > div:first-child {
        span {
          float: left;
        }
      }
      a > div:nth-child(2) {
        padding-top: 10px;
      }
    }
  }
}
/* ... */

