css changes to fix overlay z-index

--- a/ui.frontend/src/main/webpack/etisalat/styles/custom-components/header/top-navigation.scss
+++ b/ui.frontend/src/main/webpack/etisalat/styles/custom-components/header/top-navigation.scss
@@ -4,7 +4,7 @@
   border: 0;
   margin-bottom: 0;
   position: fixed;
-  z-index: 1030;
+  z-index: 1060;
   top: 0;
   width: 100%;
   transition: 0.3s;
